--- a/style.css
+++ b/style.css
@@ -71,3 +71,34 @@ img {
 .clear {
   clear: both;
 }
+
+
+/********** 
+RESPONSIVE 
+***********/
+/* mobile */
+@media screen and (max-width: 419px) {
+   .row{
+     width: 100%;
+     margin-top: 50px;
+   }
+   
+   .row h1{
+     font-size: 40px;
+   }
+
+   .row img{
+      height: 150px;
+   }
+   #lezioni .row > .left, #lezioni .row > .right {
+      width: 100%;
+      float: left;
+      margin-bottom: 30px;
+   }
+
+   #steps .row > .left, #steps .row > .central, #steps .row > .right {
+      width: 100%;
+      margin-bottom: 30px;
+   }
+
+}
