--- a/style.css
+++ b/style.css
@@ -90,15 +90,10 @@ RESPONSIVE
    .row img{
       height: 150px;
    }
-   #lezioni .row > .left, #lezioni .row > .right {
-      width: 100%;
-      float: left;
-      margin-bottom: 30px;
-   }
 
-   #steps .row > .left, #steps .row > .central, #steps .row > .right {
+   #lezioni .row .left, #lezioni .row .right,
+   #steps .row .left, #steps .row .central, #steps .row .right {
       width: 100%;
       margin-bottom: 30px;
    }
-
 }
