--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ img {
 RESPONSIVE 
 ***********/
 /* mobile */
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 419px) {
    .row{
       width: 100%;
       margin-top: 50px;
@@ -95,6 +95,7 @@ RESPONSIVE
    #steps .row .left, #steps .row .central, #steps .row .right {
       width: 100%;
       margin-bottom: 30px;
+      float: none;
     }
  }
 
@@ -106,12 +107,12 @@ RESPONSIVE
 
     #lezioni .row .left, #lezioni .row .right {
       width: calc(100% / 2 - 20px);
-      float: left;
+      float: none;
       padding: 0 10px;
     }
  
     #steps .row .left, #steps .row .central, #steps .row .right {
-      float: left;
+      float: none;
       width: calc(100% / 3 - 40px);
       padding: 0 20px;
     }
